# multi-agent-debate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_claims.jsonl
multi_agent_debate/: main.py
multi_agent_debate/debate/: __init__.py  agents.py  benchmark.py  calibration.py  compare.py  convergence.py  export.py  grading.py  graph.py  judge.py  orchestrator.py  schemas.py  server.py  utils.py
src/: main.py
src/debate/: __init__.py  agents.py  benchmark.py  calibration.py  compare.py  convergence.py  export.py  graph.py  html_export.py  judge.py  orchestrator.py  prompts.py  schemas.py  server.py  utils.py
tests/: test_benchmark.py  test_benchmark_grader.py  test_calibration.py  test_compare.py  test_constitutional.py  test_convergence.py  test_export.py  test_grading.py  test_graph.py  test_html_export.py  test_human_loop.py  test_judge.py  test_model_freshness.py  test_orchestrator.py  test_panel.py  test_schemas.py  test_server.py  test_skeptic_modes.py
