[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-debate"
version = "0.1.0"
description = "Multi-agent LLM debate framework for scalable oversight research"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "networkx>=3.3",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]

[project.scripts]
debate = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
